--- a/maintheme.css
+++ b/maintheme.css
@@ -5,6 +5,9 @@
       box-sizing: border-box;
     }
 
+    html{ height: 100%;
+  overflow-y: auto;
+    }
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background: #f9fafb;
